--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".SearchDate"/>
         <activity android:name=".Delete" />
         <activity android:name=".Update" />
-        <activity android:name=".Add" />
+        <activity android:name=".AddGame" />
         <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
